--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <script>
 
 //question 1
-const name=prompt("Enter your name:")
+const name=prompt("Enter your name:");
     console.log(`Good Morning!! ${name}`);
 
 //question 2
-console.log("Personal Info:-")
+console.log("Personal Info:-");
 let fullname="Bhakti Dattatray Shinde";
 console.log(`Name: ${fullname}`)
 console.log(`typeof Name is:`,typeof(fullname));
 
 var email="bhaktishinde2388@gmail.com";
-console.log(`Email: ${email}`)
+console.log(`Email: ${email}`);
 console.log(`typeof Email is:`,typeof(email));
 
 const age=20;
