add if else example

--- a/conditional_statement.html
+++ b/conditional_statement.html
@@ -8,11 +8,23 @@
 <body>
     <script>
         //if
-        const num1=10;
-        if(num1>=10)
+        const num=10;
+        if(num>=10)
         {
             console.log("Ten");
         }
+        //if else
+
+       const marks=28;
+       if(marks>=58)
+       {
+        console.log("you are pass");
+       }
+       else
+       {
+         console.log("you are fail");
+       }
+
     </script>
 </body>
 </html>
