--- a/conditional_statement.html
+++ b/conditional_statement.html
@@ -25,6 +25,25 @@
          console.log("you are fail");
        }
 
+       //if-else-ladder
+       const num1=1;
+       if(num1==1)
+       {
+        console.log("one");
+       }
+       else if(num1==2)
+       {
+        console.log("two");
+       }
+       else if(num1==3)
+       {
+        console.log("three");
+       }
+       else
+       {
+        console.log("invalid number");
+       }
+
     </script>
 </body>
 </html>
