--- a/conditional_statement.html
+++ b/conditional_statement.html
@@ -43,7 +43,29 @@
        {
         console.log("invalid number");
        }
+//taking input from user
 
+const gear=parseInt(prompt("Enter gear number"));
+if(gear==1)
+{
+    console.log("you enterd first gear");
+}
+else if(gear==2)
+{
+    console.log("you enterd 2 nd gear"); 
+}
+else if(gear==3)
+{
+    console.log("you enterd 3'rd gear"); 
+}
+else if(gear==4)
+{
+    console.log("select reverse"); 
+}
+else
+{
+    console.log("invalid number"); 
+}
     </script>
 </body>
 </html>
