--- a/conditional_statement.html
+++ b/conditional_statement.html
@@ -48,15 +48,15 @@
 const gear=parseInt(prompt("Enter gear number"));
 if(gear==1)
 {
-    console.log("you enterd first gear");
+    console.log("you entered first gear");
 }
 else if(gear==2)
 {
-    console.log("you enterd 2 nd gear"); 
+    console.log("you entered 2 nd gear"); 
 }
 else if(gear==3)
 {
-    console.log("you enterd 3'rd gear"); 
+    console.log("you entered 3'rd gear"); 
 }
 else if(gear==4)
 {
